--- a/angularRxjs/src/app/app.component.html
+++ b/angularRxjs/src/app/app.component.html
@@ -5,6 +5,6 @@
     [data]="data"
     [rowActions]="rowActions"
     [pagination]="pagination"
-    [expand]="true"
+    [expandComponent]="expandComponent"
   ></app-table>
 </div>
